1. Fix Collapsed topics format zoom issue - CONTRIB-7893. 2. Adjust position of 'view only' icon.

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@
 
 .course-content ul.ctopics li.section.main,
 .course-content ul.ctopics li.tcsection {
+    border-bottom: 0;
     list-style: none;
     margin: 4px 1px 1px 1px;
     padding: 0;
@@ -542,6 +543,7 @@ body#page-course-edit.lang-en_ar select#id_toggleiconset option {
 
 .course-content ul.ctopics li.section .right {
     line-height: 1.3;
+    margin-top: 1rem;
 }
 
 .course-content ul.ctopics li.section .right a {
